--- a/templates/join.html
+++ b/templates/join.html
@@ -5,6 +5,31 @@
     <title>회원가입 | 오툰뷰</title>
 </head>
 <body>
-  회원가입
+    <div>
+        <p>오.툰.뷰</p>
+        <p>오늘의 웹툰 리뷰!</p>
+    </div>
+    <div>
+        <form action="">
+            <div class="container">
+                <input type="text" placeholder="아이디를 입력해주세요." name="id">
+                <input type="submit" name="id_check" value="중복확인">
+                <br>
+                <label>사용할 수 있는 아이디 입니다!</label><br>
+                <input type="text" placeholder="닉네임을 입력해주세요." name="nickname">
+                <input type="submit" name="psw_check" value="중복확인">
+                <br>
+                <label>사용할 수 있는 닉네임입니다!</label><br>
+                <input type="password" placeholder="패스워드를 입력해주세요." name="psw">
+                <br>
+                <label>6~16 자리의 영문과 숫자 조합의 패스워드를 입력해주세요!</label><br>
+                <input type="password" placeholder="패스워드를 입력해주세요." name="psw2">
+                <br>
+                <label>패스워드를 다시 한번 입력해주세요!</label><br>
+                <button type="submit">회원가입</button>
+                <button type="button">취소</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
