OTV_html뼈대코드_메인상세

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,23 +5,6 @@
     <title>로그인 | 오툰뷰</title>
 </head>
 <body>
-    <div>
-        <p>오.툰.뷰</p>
-        <p>오늘의 웹툰 리뷰!</p>
-    </div>
-    <div>
-        <form action="">
-            <div class="container">
-                <input type="text" placeholder="아이디를 입력해주세요." name="id">
-                <br>
-                <input type="password" placeholder="패스워드를 입력해주세요." name="psw">
-                <br>
-                <button type="submit">로그인</button>
-                <br>
-                <label> 아직도 아이디가 없으시다면...</label><br>
-                <button type="button">회원가입</button>
-            </div>
-        </form>
-    </div>
+  로그인
 </body>
 </html>
