--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,8 @@
             {% set likes = webtoons[i]['likes'] %}
             <div class="topCard">
                 <div><img src="{{ image }}" alt="{{ title }}"></div>
-                <p>{{ title }}<span>추천 : {{ likes }}</span></p>
+                <p>{{ title }}</p>
+                <p>추천 : {{ likes }} <button type="button">좋아요</button></p>
             </div>
         {% endfor %}
     </div>
@@ -31,7 +32,8 @@
             {% set likes = webtoons[j]['likes'] %}
             <div class="card">
                 <div><img src="{{ image }}" alt="{{ title }}"></div>
-                <p>{{ title }}<span>추천 : {{ likes }}</span></p>
+                <p>{{ title }}</p>
+                <p>추천 : {{ likes }} <button type="button">좋아요</button></p>
             </div>
         {% endfor %}
     </div>
