OTV_로그인, 회원가입 기능 및 html 추가, init, app.py db 주소 변경.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>홈 | 오툰뷰</title>
 </head>
 <body>
+    <a href="/login">로그인하기</a> <!--로그아웃하기-->
     <div class="header">
         <div class="my_info">00님 환영합니다.</div>
         <div><button type="button">Logout</button></div>
