--- a/templates/join.html
+++ b/templates/join.html
@@ -3,8 +3,242 @@
 <head>
     <meta charset="UTF-8">
     <title>회원가입 | 오툰뷰</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bulma CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <!-- Font Awesome CSS -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
+
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+    <script>
+        function is_id(asValue) {
+            var regExp = /^(?=.*[a-zA-Z])[-a-zA-Z0-9_.]{2,10}$/;
+            //아이디 조건: a-zA-Z(영문필수(소괄호가 필수)) / [대괄호]일반적인거 a-zA-Z 0-9 _. 들이 들어갈 수있고 / {중괄호}2~10개의 문자
+            return regExp.test(asValue);
+        }
+
+        function is_nickname(asValue) {
+            var regExp = /^[ㄱ-ㅎ|가-힣|a-z|A-Z|0-9|\*]{2,10}$/;
+
+            return regExp.test(asValue);
+
+
+        }
+
+        function is_password(asValue) {
+            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            //비밀번호 조건: ()필수, \d는 숫자 의미, a-zA-Z 숫자, 영어 모두 필수, 8-20자
+            return regExp.test(asValue);
+        }
+
+        function sign_up() {
+            let username = $("#input-username").val()
+            let nickname = $("#input-nickname").val()
+            let password = $("#input-password").val()
+            let password2 = $("#input-password2").val()
+            console.log(username, nickname, password, password2)
+
+
+            if ($("#help-id").hasClass("is-danger")) {
+                alert("아이디를 다시 확인해주세요.")
+                return;
+            } else if (!$("#help-id").hasClass("is-success")) {
+                alert("아이디 중복확인을 해주세요.")
+                return;
+            }
+
+            if ($("#help-nickname").hasClass("is-danger")) {
+                alert("닉네임을 다시 확인해주세요.")
+                return;
+            } else if (!$("#help-nickname").hasClass("is-success")) {
+                alert("닉네임 중복확인을 해주세요.")
+                return;
+            }
+
+            if (password == "") {
+                $("#help-password").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password").focus()
+                return;
+            } else if (!is_password(password)) {
+                $("#help-password").text("비밀번호의 형식을 확인해주세요. 영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자").removeClass("is-safe").addClass("is-danger")
+                $("#input-password").focus()
+                return
+            } else {
+                $("#help-password").text("사용할 수 있는 비밀번호입니다.").removeClass("is-danger").addClass("is-success")
+            }
+            if (password2 == "") {
+                $("#help-password2").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password2").focus()
+                return;
+            } else if (password2 != password) {
+                $("#help-password2").text("비밀번호가 일치하지 않습니다.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password2").focus()
+                return;
+            } else {
+                $("#help-password2").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
+            }
+            $.ajax({ //위의 테스트들을 만족하면 서버로 나 이 정보로 회원가입할게 요청을 보낸다
+                type: "POST",
+                url: "/join/sign_up/save",
+                data: {
+                    username_give: username,
+                    nickname_give: nickname,
+                    password_give: password
+                },
+                success: function (response) {
+                    alert("회원가입을 축하드립니다!")
+                    window.location.replace("/login")
+                }
+            });
+
+        }
+
+        function check_dup_id() {
+            let username = $("#input-username").val()
+            console.log(username)
+            if (username == "") {
+                $("#help-id").text("아이디를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-username").focus()
+                return;
+            }
+            if (!is_id(username)) { //아이디 조건을 컴퓨터말로 적어준 거..., 아이디 조건 맞아서 true이면 밑에 아이디 형식 똑바로 하세요 안 띄워야하니까 !붙여서 true 아닌 false로
+                $("#help-id").text("아이디의 형식을 확인해주세요. 영문과 숫자, 일부 특수문자(._-) 사용 가능. 2-10자 길이").removeClass("is-safe").addClass("is-danger") //safe, danger 클래스를 먹이면 됨
+                $("#input-username").focus()
+                return;
+            }
+            $("#help-id").addClass("is-loading")
+
+            $.ajax({  //이 아이디가 기존에 있는 것인지 확인 위해, ajax 사용해서 서버에 요청한다(중복확인)
+                type: "POST",
+                url: "/join/sign_up/check_dup_id",
+                data: {
+                    username_give: username
+                },
+                success: function (response) {
+
+                    if (response["exists"]) {
+                        $("#help-id").text("이미 존재하는 아이디입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#input-username").focus()
+                    } else {
+                        $("#help-id").text("사용할 수 있는 아이디입니다.").removeClass("is-danger").addClass("is-success")
+                    }
+                    $("#help-id").removeClass("is-loading")
+
+                }
+            });
+        }
+
+        function check_dup_nickname() {
+            let nickname = $("#input-nickname").val()
+            console.log(nickname)
+            if (nickname == "") {
+                $("#help-nickname").text("닉네임을 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-nickname").focus()
+                return;
+            }
+            if (!is_nickname(nickname)) {
+                $("#help-nickname").text("닉네임의 형식을 확인해주세요. 한글, 영문, 숫자 사용 가능. 2-10자 길이").removeClass("is-safe").addClass("is-danger") //safe, danger 클래스를 먹이면 됨
+                $("#input-nickname").focus()
+                return;
+            }
+            $("#help-nick").addClass("is-loading")
+
+            $.ajax({  //이 아이디가 기존에 있는 것인지 확인 위해, ajax 사용해서 서버에 요청한다(중복확인)
+                type: "POST",
+                url: "/join/sign_up/check_dup_nickname",
+                data: {
+                    nickname_give: nickname
+                },
+                success: function (response) {
+
+                    if (response["exists"]) {
+                        $("#help-nickname").text("이미 존재하는 닉네임입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#input-nickname").focus()
+                    } else {
+                        $("#help-nickname").text("사용할 수 있는 닉네임입니다.").removeClass("is-danger").addClass("is-success")
+                    }
+                    $("#help-nickname").removeClass("is-loading")
+
+                }
+            });
+        }
+
+
+    </script>
+
 </head>
 <body>
-  회원가입
+    <section class="header">
+        <div class="titile-box">
+            <h1 class="title">OTV</h1>
+            <h3 class="subtitle">웹툰, 무엇이든 추천해드립니다.</h3>
+        </div>
+    </section>
+    <section class="login-section">
+        <div class="login-container">
+            <div class="box">
+                <div class="field">   <!-- 아이디, 중복확인-->
+                    <div class="id-box control has-icons-left"> <!--아이디-->
+                        <input id="input-username" class="input" type="text" placeholder="아이디">
+                        <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
+                    </div>
+                    <div id="btn-check-dup" class="control">
+                        <button class="button" onclick="check_dup_id()">중복확인</button>
+                    </div>
+                </div>
+                <p id="help-id" class="help">아이디는 2-10자의 영문과 숫자와 일부 특수문자(._-)만 입력 가능합니다.</p>
+                <p id="help-id-login" class="help is-danger"></p>
+
+                <div class="field">   <!-- 닉네임, 중복확인, 아이디 조건-->
+                    <div class="nickname-box control has-icons-left">
+                        <input id="input-nickname" class="input" type="text" placeholder="닉네임">
+                        <span class="icon is-small is-left"><i class="fa fa-star"></i></span>
+                    </div>
+                    <div id="btn-check-dup-nickname" class="control">
+                        <button class="button" onclick="check_dup_nickname()">중복확인</button>
+                    </div>
+                    <p id="help-nickname" class="help">닉네임은 2-10자의 한글, 영문, 숫자만 입력 가능합니다.</p>
+                    <p id="help-nickname-login" class="help is-danger"></p>
+                </div>
+
+
+                <!-- 비밀번호 -->
+                <div class="field">
+                    <div class="password-box control has-icons-left"> <!--비밀번호-->
+                        <input id="input-password" class="input" type="password" placeholder="비밀번호">
+                        <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
+                    </div>
+                    <p id="help-password" class="help">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도 사용 가능합니다.</p>
+                </div>
+                <!--비밀번호 재입력-->
+                <div class="field">
+                    <div class="control has-icons-left" style="width:100%">
+                        <input id="input-password2" class="input" type="password"
+                               placeholder="비밀번호 재입력">
+                        <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
+                    </div>
+                    <p id="help-password2" class="help">비밀번호를 다시 한 번 입력해주세요.</p>
+                    <nav class="level is-mobile">
+                        <button class="level-item button is-sparta" onclick="sign_up()">
+                            회원가입
+                        </button>
+                        <button class="level-item button is-sparta is-outlined" onclick="window.location.href='/login'">
+                            취소
+                        </button>
+                    </nav>
+
+                </div>
+
+
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
