OTV_좋아요 버그 수정(top3 부분)

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,8 @@
             {% set title = webtoons[i]['title'] %}
             {% set likes = webtoons[i]['likes'] %}
             {% set id = webtoons[i]['id'] %}
+            {% set check_like = webtoons[i]['check_like'] %}
+
             <div class="topCard">
                 <div><img src="{{ image }}" alt="{{ title }}"></div>
                 <p>{{ title }}</p>
