OTV_메인 페이지 일부 스타일 적용

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -16,6 +16,15 @@ button {
     font-family: 'Noto Serif KR', serif;
 }
 
+a,
 button {
     cursor: pointer;
+}
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: black;
 }
