--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,1 +1,108 @@
-/*main*/
+body {
+    width: 100%;
+    padding-top: 50px;
+}
+
+.container {
+    width: 100%;
+    max-width: 1000px;
+    padding: 0 20px;
+}
+
+.main-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+}
+
+.main-header .my-info {
+    display: flex;
+    align-items: center;
+}
+
+
+.title-box {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    gap: 15px;
+
+}
+
+.title-text,
+.title-description {
+    text-align: center;
+}
+
+.title-text {
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.title-description {
+    font-size: 20px;
+}
+
+.subtitle {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.webtoon-best,
+.webtoon-all
+{
+    padding-top: 50px;
+}
+
+.toprank-item,
+.webtoon-all-item {
+    background-color: white;
+    transition: box-shadow 300ms ease-in-out;
+}
+
+.toprank-item:hover,
+.webtoon-all-item:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.toprank-list {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    align-content: center;
+    gap: 20px;
+}
+
+.toprank-item {
+    width: 300px;
+}
+
+.toprank-detail {
+    height: 100px;
+}
+
+.webtoon-all-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+}
+
+.webtoon-all-item {
+    width: 200px;
+}
+
+.webtoon-imgbox {
+    width: 100%;
+}
+
+.webtoon-imgbox img {
+    width: 100%;
+}
+
