--- a/templates/index.html
+++ b/templates/index.html
@@ -25,67 +25,85 @@
         function sign_out() {
             $.removeCookie('mytoken', {path: '/'});
             alert('로그아웃!')
-            window.location.href='/login'
+            window.location.href = '/login'
         }
-
-
     </script>
 
 
 </head>
 <body>
 
-    <div class="header">
-        <div class="my_info">00님 환영합니다.</div>
-        <div><button onclick="sign_out()" type="button">Logout</button></div>
+    <div class="container">
+        <div class="main-header">
+        <p class="my-info">00님 환영합니다.</p>
+        <button onclick="sign_out()" type="button">로그아웃</button>
     </div>
-    <div>
-        오.튠.뷰<span>오늘의 웹툰 리뷰!</span>
-    </div>
-    <div class="topBox">
-        <div>Today's top3</div>
-        {% for i in range(3) %}
-            {% set image = webtoons[i]['image'] %}
-            {% set title = webtoons[i]['title'] %}
-            {% set likes = webtoons[i]['likes'] %}
-            {% set id = webtoons[i]['id'] %}
-            {% set check_like = webtoons[i]['check_like'] %}
 
-            <div class="topCard">
-                <div><img src="{{ image }}" alt="{{ title }}"></div>
-                <p>{{ title }}</p>
-                <p>
-                    추천 : <span class="likes-count" data-num={{ id }}>{{ likes }}</span>
-                    {% if check_like == false %}
-                        <button class="likes like-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                    {% else %}
-                        <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart" aria-hidden="true"></i></button>
-                    {% endif %}
-                </p>
-            </div>
-        {% endfor %}
+        <div class="title-box">
+        <h1 class="title-text">
+            오튠뷰
+        </h1>
+        <span class="title-description">오늘의 웹툰 리뷰</span>
     </div>
-    <div class="cardBox">
-        {% for j in range(3,webtoons|length) %}
-            {% set image = webtoons[j]['image'] %}
-            {% set title = webtoons[j]['title'] %}
-            {% set likes = webtoons[j]['likes'] %}
-            {% set id = webtoons[j]['id'] %}
-            {% set check_like = webtoons[j]['check_like'] %}
 
-            <div class="card">
-                <div><img src="{{ image }}" alt="{{ title }}"></div>
-                <p>{{ title }}</p>
-               <p>
-                    추천 : <span class="likes-count" data-num={{ id }}>{{ likes }}</span>
-                    {% if check_like == false %}
-                        <button class="likes like-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                    {% else %}
-                        <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart" aria-hidden="true"></i></button>
-                    {% endif %}
-                </p>
-            </div>
-        {% endfor %}
+        <article class="webtoon-best">
+        <h2 class="subtitle">오늘의 웹툰 베스트 TOP 3!</h2>
+        <ul class="toprank-list">
+            {% for i in range(3) %}
+                {% set image = webtoons[i]['image'] %}
+                {% set title = webtoons[i]['title'] %}
+                {% set likes = webtoons[i]['likes'] %}
+                {% set id = webtoons[i]['id'] %}
+                {% set check_like = webtoons[i]['check_like'] %}
+
+                <a href="/webtoons/{{ id }}" class="toprank-link">
+                    <li class="toprank-item">
+                        <div class="webtoon-imgbox"><img src="{{ image }}" alt="{{ title }}"></div>
+                        <div class="toprank-detail">
+                            <h4>{{ title }}</h4>
+                            <div>
+                                {% if check_like == false %}
+                                    <button class="likes like-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
+                                {% else %}
+                                    <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart" aria-hidden="true"></i></button>
+                                {% endif %}
+                                <span class="likes-count" data-num={{ id }}>{{ likes }}</span>
+                            </div>
+                        </div>
+                    </li>
+                </a>
+            {% endfor %}
+        </ul>
+    </article>
+
+        <article class="webtoon-all">
+        <h2 class="subtitle">모든 웹툰</h2>
+        <ul class="webtoon-all-list">
+            {% for j in range(3,webtoons|length) %}
+                {% set image = webtoons[j]['image'] %}
+                {% set title = webtoons[j]['title'] %}
+                {% set likes = webtoons[j]['likes'] %}
+                {% set id = webtoons[j]['id'] %}
+                {% set check_like = webtoons[j]['check_like'] %}
+
+                <li class="webtoon-all-item">
+                    <div class="webtoon-imgbox"><img src="{{ image }}" alt="{{ title }}"></div>
+                    <div class="webtoon-all-detail">
+                        <h4>{{ title }}</h4>
+                        <div>
+                            {% if check_like == false %}
+                                <button class="likes like-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
+                            {% else %}
+                                <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart" aria-hidden="true"></i></button>
+                            {% endif %}
+                            <span class="likes-count" data-num={{ id }}>{{ likes }}</span>
+                         </div>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    </article>
     </div>
+
 </body>
 </html>
