--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;600;900&display=swap');
 
 @import url('./reset.css');
+@import url('./constant.css');
 @import url('./global.css');
 @import url('./login.css');
 @import url('./join.css');
