--- a/templates/join.html
+++ b/templates/join.html
@@ -179,38 +179,47 @@
 
 </head>
 <body>
-    <section class="header">
-        <div class="titile-box">
-            <h1 class="title">OTV</h1>
+    <section class="join-header">
+        <div class="title-box">
+            <h1 class="title">오 툰 뷰</h1>
             <h3 class="subtitle">웹툰, 무엇이든 추천해드립니다.</h3>
         </div>
     </section>
-    <section class="login-section">
-        <div class="login-container">
+    <section class="join-section">
+        <div class="join-container">
             <div class="box">
-                <div class="field">   <!-- 아이디, 중복확인-->
-                    <div class="id-box control has-icons-left"> <!--아이디-->
+                <div class="id-field">   <!-- 아이디, 중복확인-->
+                    <div class="id-check-box control has-icons-left"> <!--아이디-->
                         <input id="input-username" class="input" type="text" placeholder="아이디">
                         <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
                     </div>
-                    <div id="btn-check-dup" class="control">
+                     <button class="button btn-check" onclick="check_dup_id()">중복확인</button>
+                   <!-- <div id="btn-check-dup" class="control">
                         <button class="button" onclick="check_dup_id()">중복확인</button>
-                    </div>
+                    </div>-->
                 </div>
-                <p id="help-id" class="help">아이디는 2-10자의 영문과 숫자와 일부 특수문자(._-)만 입력 가능합니다.</p>
-                <p id="help-id-login" class="help is-danger"></p>
+                <div>
+                    <p id="help-id" class="help">아이디는 2-10자의 영문과 숫자와 일부 특수문자(._-)만 입력 가능합니다.</p>
+                    <p id="help-id-login" class="help is-danger"></p>
+                </div>
 
-                <div class="field">   <!-- 닉네임, 중복확인, 아이디 조건-->
-                    <div class="nickname-box control has-icons-left">
+
+                <div class="nickname-field">   <!-- 닉네임, 중복확인, 아이디 조건-->
+                    <div class="nickname-check-box control has-icons-left">
                         <input id="input-nickname" class="input" type="text" placeholder="닉네임">
                         <span class="icon is-small is-left"><i class="fa fa-star"></i></span>
                     </div>
-                    <div id="btn-check-dup-nickname" class="control">
+                    <button class="button btn-check" onclick="check_dup_nickname()">중복확인</button>
+                    <!--<div id="btn-check-dup-nickname" class="control">
                         <button class="button" onclick="check_dup_nickname()">중복확인</button>
-                    </div>
+                    </div>-->
+                </div>
+                <div>
                     <p id="help-nickname" class="help">닉네임은 2-10자의 한글, 영문, 숫자만 입력 가능합니다.</p>
                     <p id="help-nickname-login" class="help is-danger"></p>
                 </div>
+
+
 
 
                 <!-- 비밀번호 -->
@@ -230,10 +239,10 @@
                     </div>
                     <p id="help-password2" class="help">비밀번호를 다시 한 번 입력해주세요.</p>
                     <nav class="level is-mobile">
-                        <button class="level-item button is-sparta" onclick="sign_up()">
+                        <button class="level-item button" onclick="sign_up()">
                             회원가입
                         </button>
-                        <button class="level-item button is-sparta is-outlined" onclick="window.location.href='/login'">
+                        <button class="level-item button is-outlined" onclick="window.location.href='/login'">
                             취소
                         </button>
                     </nav>
