--- a/templates/index.html
+++ b/templates/index.html
@@ -63,9 +63,9 @@
                             <h4>{{ title }}</h4>
                             <div>
                                 {% if check_like == false %}
-                                    <button class="likes like-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
+                                    <button class="likes like-btn" type="button" data-id={{ id }} onclick="event.preventDefault(); toggle_like({{ id }});"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
                                 {% else %}
-                                    <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart" aria-hidden="true"></i></button>
+                                    <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="event.preventDefault(); toggle_like({{ id }});"><i class="fa fa-heart" aria-hidden="true"></i></button>
                                 {% endif %}
                                 <span class="likes-count" data-num={{ id }}>{{ likes }}</span>
                             </div>
@@ -92,9 +92,9 @@
                         <h4>{{ title }}</h4>
                         <div>
                             {% if check_like == false %}
-                                <button class="likes like-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
+                                <button class="likes like-btn" type="button" data-id={{ id }} onclick="event.preventDefault(); toggle_like({{ id }});"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
                             {% else %}
-                                <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="toggle_like({{ id }})"><i class="fa fa-heart" aria-hidden="true"></i></button>
+                                <button class="likes dislike-btn" type="button" data-id={{ id }} onclick="event.preventDefault(); toggle_like({{ id }});"><i class="fa fa-heart" aria-hidden="true"></i></button>
                             {% endif %}
                             <span class="likes-count" data-num={{ id }}>{{ likes }}</span>
                          </div>
